@@ -57,6 +57,10 @@ void *__libc_stack_end;
 
 struct hurd_startup_data *_dl_hurd_data;
 
+/* This is used only within ld.so, via dl-minimal.c's __errno_location.  */
+#undef errno
+int errno attribute_hidden;
+
 /* Defining these variables here avoids the inclusion of hurdsig.c.  */
 unsigned long int __hurd_sigthread_stack_base;
 unsigned long int __hurd_sigthread_stack_end;
